syntax = "proto3";

package my.com.grpc.countries;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option java_multiple_files = true;
option java_package = "my.com.grpc.countries";
option java_outer_classname = "CountriesProto";

service CountryService {
  rpc GetCountry(idRequest) returns (CountryResponse) {}
  rpc ListCountries(CounterRequest) returns (stream CountryResponse) {}
  rpc CreateCountry(CreateCountryRequest) returns (CountryResponse) {}
  rpc CreateStreamCountry(stream CreateStreamCountryRequest) returns (CounterRequest) {}
  rpc UpdateCountry(UpdateCountryRequest) returns (CountryResponse) {}
}

message idRequest {
  string id = 1;
}

message CounterRequest {
  uint32 counter = 1;
}

message UpdateCountryRequest {
  string code = 1;
  CreateCountryRequest input = 2;
}

message CreateStreamCountryRequest {
  string count = 1;
  CreateCountryRequest input = 2;
}

message CreateCountryRequest {
  string name = 1;
  string code = 2;
  string coordinates = 3;
}

message CountryResponse {
  string id = 1;
  string name = 2;
  string code = 3;
  string coordinates = 4;
}